# pesebre-navidad

./: Cargo.toml  LICENSE  README.md  diseño_pcb.xopp
.cargo/: config.toml
corte-laser/: corte-cajas-inferiores.lbrn2  corte_tabla_panamericana_50x70.lbrn2  trazado-navidad-pesebre-corte-28x22-suplemento.lbrn2  trazado-navidad-pesebre-corte-28x22.lbrn2  trazado-navidad-pesebre-corte-28x28-suplemento.lbrn2  trazado-navidad-pesebre-corte-28x28.lbrn2  trazado-navidad-pesebre.lbrn2  trazado-navidad-test.lbrn2  trazado-navidad.lbrn2
pesebre navidad/: MP3-TF-16P.kicad_sch  pesebre navidad.kicad_prl  pesebre navidad.kicad_pro  pesebre navidad.kicad_sch  untitled.kicad_sch
src/: index.html  main.rs
src/dfplayer_mini/: mod.rs
